Done LoginPage (no responsive)

--- a/index.html
+++ b/index.html
@@ -598,12 +598,15 @@
                                 <div class="share">
                                     <div class="share-content">
                                         <p><i>Em cảm ơn thầy Biên và chị Linh rất nhiều.
-                                            Qua khóa học siêu đầy đủ, siêu chi tiết, đủ tất cả các dạng bài thi đại học
-                                            của môn Lý, em đã đạt được 9,25 lí trong kì thi đại học 2019.
-                                            Thực sự đây là một khóa học cực kì tốt, giúp phát triển tư duy cực mạnh, tất
-                                            cả các em khóa sau nên tham gia khóa học này.
-                                            Cuối cùng, chuvanbien.vn is the best website to learn Physics all over the
-                                            world</i></p>
+                                                Qua khóa học siêu đầy đủ, siêu chi tiết, đủ tất cả các dạng bài thi đại
+                                                học
+                                                của môn Lý, em đã đạt được 9,25 lí trong kì thi đại học 2019.
+                                                Thực sự đây là một khóa học cực kì tốt, giúp phát triển tư duy cực mạnh,
+                                                tất
+                                                cả các em khóa sau nên tham gia khóa học này.
+                                                Cuối cùng, chuvanbien.vn is the best website to learn Physics all over
+                                                the
+                                                world</i></p>
                                     </div> <!-- End .share-content -->
                                     <div class="info">
                                         <img src="images/avatar-info.jpg" alt="">
@@ -622,16 +625,23 @@
                                 <div class="share">
                                     <div class="share-content">
                                         <p><i>
-                                            Trước giờ môn Vật lý luôn là niềm đam mê của mình, nhưng bước lên lớp 12 thực
-                                            sự mình rất sốc vì Vật lý 12 khác hoàn toàn so với Vật lý trước kia mình
-                                            từng học, mình bị học chậm so với các bạn, từ đấy dẫn đến mình sợ môn Lý,
-                                            nhưng may mắn là mình biết đến thầy và đăng ký học, trình độ của mình lên
-                                            hẳn, có lẽ vì cách dạy của thày phù hợp với mình, không những thế mà thầy và
-                                            ekip rất quan tâm đến học sinh, luôn update chất lượng bài giảng, tổ chức
-                                            thi rất thường xuyên. Từ một đứa chỉ mấp mé 7 điểm, sau khi hoàn thành khóa
-                                            học của thầy, mình đã đạt 9,75 điểm môn Vật lý THPT 2022, một con số mình
-                                            chưa từng mơ tới. Thật sự em cảm ơn thầy và ekip rất nhiều ạ.
-                                        </i></p>
+                                                Trước giờ môn Vật lý luôn là niềm đam mê của mình, nhưng bước lên lớp 12
+                                                thực
+                                                sự mình rất sốc vì Vật lý 12 khác hoàn toàn so với Vật lý trước kia mình
+                                                từng học, mình bị học chậm so với các bạn, từ đấy dẫn đến mình sợ môn
+                                                Lý,
+                                                nhưng may mắn là mình biết đến thầy và đăng ký học, trình độ của mình
+                                                lên
+                                                hẳn, có lẽ vì cách dạy của thày phù hợp với mình, không những thế mà
+                                                thầy và
+                                                ekip rất quan tâm đến học sinh, luôn update chất lượng bài giảng, tổ
+                                                chức
+                                                thi rất thường xuyên. Từ một đứa chỉ mấp mé 7 điểm, sau khi hoàn thành
+                                                khóa
+                                                học của thầy, mình đã đạt 9,75 điểm môn Vật lý THPT 2022, một con số
+                                                mình
+                                                chưa từng mơ tới. Thật sự em cảm ơn thầy và ekip rất nhiều ạ.
+                                            </i></p>
                                     </div> <!-- End .share-content -->
                                     <div class="info">
                                         <img src="images/avatar-info1.jpg" alt="">
@@ -651,13 +661,17 @@
                                 <div class="share">
                                     <div class="share-content">
                                         <p><i>Thầy dạy rất tận tâm tận tình, phải học rồi thì mới biết. Bài giảng hay và
-                                            sâu, đôi khi có nhắc đến kiến thức bên ngoài nên ngay những câu lý thuyết
-                                            học cũng rất thú vị. Bài giảng thì thầy luôn update liên tục với những
-                                            phương pháp giải mới, cập nhật kèm chỉnh sửa sao cho dễ hiểu. Với cả bên
-                                            cạnh đó, mình thấy các anh chị admin rất quan tâm đến phản ánh của học sinh.
-                                            Bữa có mình nhắn tin lúc tối muộn mà vẫn có người trả lời :). Bài tập thì
-                                            không thiếu, chỉ sợ làm không hết. Nói chung mình thấy học thầy là học bản
-                                            chất, rất ổn ngay cả khi ôn thi tư duy hay ĐGNL.</i></p>
+                                                sâu, đôi khi có nhắc đến kiến thức bên ngoài nên ngay những câu lý
+                                                thuyết
+                                                học cũng rất thú vị. Bài giảng thì thầy luôn update liên tục với những
+                                                phương pháp giải mới, cập nhật kèm chỉnh sửa sao cho dễ hiểu. Với cả bên
+                                                cạnh đó, mình thấy các anh chị admin rất quan tâm đến phản ánh của học
+                                                sinh.
+                                                Bữa có mình nhắn tin lúc tối muộn mà vẫn có người trả lời :). Bài tập
+                                                thì
+                                                không thiếu, chỉ sợ làm không hết. Nói chung mình thấy học thầy là học
+                                                bản
+                                                chất, rất ổn ngay cả khi ôn thi tư duy hay ĐGNL.</i></p>
                                     </div> <!-- End .share-content -->
                                     <div class="info">
                                         <img src="images/avatar-info2.jpg" alt="">
@@ -676,12 +690,15 @@
                                 <div class="share">
                                     <div class="share-content">
                                         <p><i>Em cảm ơn thầy Biên và chị Linh rất nhiều.
-                                            Qua khóa học siêu đầy đủ, siêu chi tiết, đủ tất cả các dạng bài thi đại học
-                                            của môn Lý, em đã đạt được 9,25 lí trong kì thi đại học 2019.
-                                            Thực sự đây là một khóa học cực kì tốt, giúp phát triển tư duy cực mạnh, tất
-                                            cả các em khóa sau nên tham gia khóa học này.
-                                            Cuối cùng, chuvanbien.vn is the best website to learn Physics all over the
-                                            world</i></p>
+                                                Qua khóa học siêu đầy đủ, siêu chi tiết, đủ tất cả các dạng bài thi đại
+                                                học
+                                                của môn Lý, em đã đạt được 9,25 lí trong kì thi đại học 2019.
+                                                Thực sự đây là một khóa học cực kì tốt, giúp phát triển tư duy cực mạnh,
+                                                tất
+                                                cả các em khóa sau nên tham gia khóa học này.
+                                                Cuối cùng, chuvanbien.vn is the best website to learn Physics all over
+                                                the
+                                                world</i></p>
                                     </div> <!-- End .share-content -->
                                     <div class="info">
                                         <img src="images/avatar-info5.jpg" alt="">
@@ -700,18 +717,23 @@
                                 <div class="share">
                                     <div class="share-content">
                                         <p><i>
-                                            Ngọn lửa nhiệt huyết và sự tận tình giảng dạy chu đáo của thầy đã mang lại
-                                            cho em sự hứng thú và niềm yêu thích với bộ môn Vật lý! Chính sự không ngừng
-                                            thay đổi bản thân và luôn cố gắng đổi mới phương pháp dạy học của thầy đã
-                                            khiến việc học của em trở nên hiệu quả và thú vị nhất. Em tin thầy và đội
-                                            ngũ Chu Văn Biên sẽ tiếp tục và mang đến nhiều thành công hơn cho những khóa
-                                            học sinh tiếp theo ạ????????????!
-                                        </i></p>
+                                                Ngọn lửa nhiệt huyết và sự tận tình giảng dạy chu đáo của thầy đã mang
+                                                lại
+                                                cho em sự hứng thú và niềm yêu thích với bộ môn Vật lý! Chính sự không
+                                                ngừng
+                                                thay đổi bản thân và luôn cố gắng đổi mới phương pháp dạy học của thầy
+                                                đã
+                                                khiến việc học của em trở nên hiệu quả và thú vị nhất. Em tin thầy và
+                                                đội
+                                                ngũ Chu Văn Biên sẽ tiếp tục và mang đến nhiều thành công hơn cho những
+                                                khóa
+                                                học sinh tiếp theo ạ????????????!
+                                            </i></p>
                                     </div> <!-- End .share-content -->
                                     <div class="info">
                                         <img src="images/avatar-info3.jpg" alt="">
                                         <div class="achievements">
-                                            <div class="name">Phạm Thùy Linh</div>    
+                                            <div class="name">Phạm Thùy Linh</div>
                                             <div class="pass">Đạt 10 điểm môn Vật lí trong kì thi THPT quốc gia năm 2022
                                             </div>
                                         </div>
