--- a/modules/header.html
+++ b/modules/header.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-1">
                 <div class="header__logo">
-                    <a href="#"><img src="images/logo-vecto-01_1668850214.svg" alt=""></a>
+                    <a href="../index.html"><img src="images/logo-vecto-01_1668850214.svg" alt=""></a>
                 </div>
             </div>
     
@@ -29,7 +29,7 @@
     
             <div class="col-lg-3">
                 <div class="header__button">
-                    <a href="#"><button class="button__login">Đăng nhập</button></a>
+                    <a href="../login.html"><button class="button__login">Đăng nhập</button></a>
                     <a href="#"><button class="button__register">Đăng ký</button></a>
                 </div>
             </div>
@@ -41,7 +41,7 @@
 <nav class="primary-menu">
     <div class="container">
         <ul>
-            <li><a href="#"><i class="fa fa-home"></i> Trang Chủ</a></li>
+            <li><a href="../index.html"><i class="fa fa-home"></i> Trang Chủ</a></li>
             <li><a href="#"><i class="fa fa-file"></i> Khóa học</a></li>
             <li><a href="#"><i class="fa fa-book"></i> Sách</a></li>
             <li><a href="#"><i class="fa fa-file"></i> Đề Thi</a></li>
