--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- Bootstrap CSS v5.2.1 -->
+    <link rel="shortcut icon" href="images/reading.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/reset.css">
@@ -53,28 +54,28 @@
             <div class="container">
                 <div class="box-banner-item">
                     <div class="row">
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 ">
                             <div class="item-img">
                                 <a href="#"><img src="images/boxbanner1.png" alt=""></a>
                                 <span class="banner-text">Khóa 2k7</span>
                             </div>
                         </div>
 
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                             <div class="item-img">
                                 <a href="#"><img src="images/boxbanner2.png" alt=""></a>
                                 <span class="banner-text">Khóa 2k8</span>
                             </div>
                         </div>
 
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                             <div class="item-img">
                                 <a href="#"><img src="images/boxbanner3.png" alt=""></a>
                                 <span class="banner-text">Khóa 2k9</span>
                             </div>
                         </div>
 
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                             <div class="item-img">
                                 <a href="#"><img src="images/banner_2_1639545385.png" alt=""></a>
                                 <span class="banner-text">Gói giáo viên tham khảo</span>
@@ -110,34 +111,34 @@
                 </div> <!--End .button-step-->
                 <div class="box-step-item mt-4">
                     <div class="row justify-content-center">
-                        <div class="col-lg-2">
+                        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                             <img src="images/step1.png" alt="">
                             <p class="text-center mt-3">Chọn khóa học</p>
                         </div>
 
-                        <div class="col-lg-1 mt-5">
+                        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 mt-5">
                             <img src="images/arrow.png" alt="">
                         </div>
 
-                        <div class="col-lg-2">
+                        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                             <img src="images/step2.png" alt="">
                             <p class="text-center mt-3">Chọn khóa học</p>
                         </div>
 
-                        <div class="col-lg-1 mt-5">
+                        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 mt-5">
                             <img src="images/arrow.png" alt="">
                         </div>
 
-                        <div class="col-lg-2">
+                        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                             <img src="images/step3.png" alt="">
                             <p class="text-center mt-3">Chọn khóa học</p>
                         </div>
 
-                        <div class="col-lg-1 mt-5">
+                        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 mt-5">
                             <img src="images/arrow.png" alt="">
                         </div>
 
-                        <div class="col-lg-2">
+                        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                             <img src="images/step4.png" alt="">
                             <p class="text-center mt-3">Chọn khóa học</p>
                         </div>
@@ -150,10 +151,10 @@
             <div class="container">
                 <div class="box-tranning-top">
                     <div class="row">
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                             <h3 class="mb-4 box-title">KHÓA HỌC NỔI BẬT</h3>
                         </div>
-                        <div class="col-lg-9 d-flex justify-content-end">
+                        <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9 d-flex justify-content-end">
                             <ul class="category-list">
                                 <li><a href="#">Combo vip 2025</a></li>
                                 <li><a href="#">Combo vip 2026</a></li>
@@ -167,7 +168,7 @@
 
                 <div class="box-tranning-middle">
                     <div class="row">
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 col-lg-6 col-md-6 col-sm-6 col-xs-6 col-sm-6 col-xs-6">
                             <a href="#"><img src="images/bannercombo.jpg" class="img-fluid img-main-box"
                                     alt="Ảnh lớn"></a>
                             <div class="box-tranning-item d-flex">
@@ -177,7 +178,7 @@
                             </div> <!--End .box-tranning-item--->
                         </div>
 
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 col-lg-6 col-md-6 col-sm-6 col-xs-6 col-sm-6 col-xs-6">
                             <div class="box-right owl-carousel owl-theme">
                                 <div class="item">
                                     <div class="box-traning-img">
@@ -242,7 +243,7 @@
                         </div>
 
                         <!-- Dưới cùng: 4 sản phẩm -->
-                        <div class="col-lg-12">
+                        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-12 col-md-12 col-sm-12 col-xs-12">
                             <div class="owl-carousel owl-theme m-3 banner-under">
                                 <div class="item">
                                     <div class="item-img">
@@ -345,10 +346,10 @@
             <div class="container">
                 <div class="box-book-top">
                     <div class="row">
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                             <h3 class="mb-4 box-title">SÁCH NỔI BẬT</h3>
                         </div>
-                        <div class="col-lg-9 d-flex justify-content-end">
+                        <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9 d-flex justify-content-end">
                             <ul class="category-list">
                                 <li><a href="#">Sách luyện thi vật lý THPT</a></li>
                                 <li><a href="#">Sách luyện thi THPT</a></li>
@@ -359,7 +360,7 @@
 
                 <div class="box-book-item m-2">
                     <div class="row">
-                        <div class="col-lg-12">
+                        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-12 col-md-12 col-sm-12 col-xs-12">
                             <div class="box-book-info owl-carousel owl-theme">
                                 <div class="item">
                                     <div class="item-img">
@@ -439,11 +440,11 @@
                     <h3 class="mb-4 box-title">SÁCH NỔI BẬT</h3>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                         <h4 class="text-center rank-subject">Vật lý 10</h4>
                     </div>
 
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                         <h4 class="text-center rank-subject">Vật lý 11</h4>
                         <div class="ranking-infomation">
                             <a href="#"><img src="images/avatar-default.svg" class="img-fluid" alt=""></a>
@@ -496,7 +497,7 @@
                         </div> <!-- End .ranking-infomation -->
                     </div>
 
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                         <h4 class="text-center rank-subject">Vật lý 12</h4>
                         <div class="ranking-infomation">
                             <a href="#"><img src="images/avatar-default.svg" class="img-fluid" alt=""></a>
@@ -555,29 +556,29 @@
         <section class="news-share mb-1">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                         <div class="left">
                             <h3 class="left-title box-title mb-4">TIN TỨC</h3>
                             <div class="row">
-                                <div class="left-item col-md-6">
+                                <div class="left-item col-lg-6 col-md-6 col-sm-6 col-xs-6">
                                     <a href="#"><img src="images/news1.jpg" alt=""></a>
                                     <a href="#">
                                         <p>ĐỀ THAM KHẢO MÔN VẬT LÍ NĂM 2025 - NHẬN ĐỊNH ĐỀ...</p>
                                     </a>
                                 </div> <!-- End .left-item -->
-                                <div class="left-item col-md-6">
+                                <div class="left-item col-lg-6 col-md-6 col-sm-6 col-xs-6">
                                     <a href="#"><img src="images/news2.jpg" alt=""></a>
                                     <a href="#">
                                         <p>ĐỀ THAM KHẢO MÔN VẬT LÍ NĂM 2025 - NHẬN ĐỊNH ĐỀ...</p>
                                     </a>
                                 </div> <!-- End .left-item -->
-                                <div class="left-item col-md-6">
+                                <div class="left-item col-lg-6 col-md-6 col-sm-6 col-xs-6">
                                     <a href="#"><img src="images/news3.jpg" alt=""></a>
                                     <a href="#">
                                         <p>ĐỀ THAM KHẢO MÔN VẬT LÍ NĂM 2025 - NHẬN ĐỊNH ĐỀ...</p>
                                     </a>
                                 </div> <!-- End .left-item -->
-                                <div class="left-item col-md-6">
+                                <div class="left-item col-lg-6 col-md-6 col-sm-6 col-xs-6">
                                     <a href="#"><img src="images/news4.jpg" alt=""></a>
                                     <a href="#">
                                         <p>ĐỀ THAM KHẢO MÔN VẬT LÍ NĂM 2025 - NHẬN ĐỊNH ĐỀ...</p>
@@ -590,7 +591,7 @@
                         </div> <!-- End .left -->
                     </div>
 
-                    <div class="col-md-6">
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                         <div class="right owl-carousel owl-theme">
                             <!-- Chia sẻ 1 -->
                             <div class="item">
