Done HomePage & responsive

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -53,38 +54,40 @@
         <section class="box-banner m-3">
             <div class="container">
                 <div class="box-banner-item">
-                    <div class="row">
-                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 ">
-                            <div class="item-img">
-                                <a href="#"><img src="images/boxbanner1.png" alt=""></a>
+                    <div class="row g-3"> <!-- Thêm gap giữa các banner -->
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                            <div class="item-img text-center">
+                                <a href="#"><img src="images/boxbanner1.png" alt="Khóa 2k7" class="img-fluid"></a>
                                 <span class="banner-text">Khóa 2k7</span>
                             </div>
                         </div>
 
-                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                            <div class="item-img">
-                                <a href="#"><img src="images/boxbanner2.png" alt=""></a>
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                            <div class="item-img text-center">
+                                <a href="#"><img src="images/boxbanner2.png" alt="Khóa 2k8" class="img-fluid"></a>
                                 <span class="banner-text">Khóa 2k8</span>
                             </div>
                         </div>
 
-                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                            <div class="item-img">
-                                <a href="#"><img src="images/boxbanner3.png" alt=""></a>
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                            <div class="item-img text-center">
+                                <a href="#"><img src="images/boxbanner3.png" alt="Khóa 2k9" class="img-fluid"></a>
                                 <span class="banner-text">Khóa 2k9</span>
                             </div>
                         </div>
 
-                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                            <div class="item-img">
-                                <a href="#"><img src="images/banner_2_1639545385.png" alt=""></a>
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                            <div class="item-img text-center">
+                                <a href="#"><img src="images/banner_2_1639545385.png" alt="Gói giáo viên tham khảo"
+                                        class="img-fluid"></a>
                                 <span class="banner-text">Gói giáo viên tham khảo</span>
                             </div>
                         </div>
                     </div>
-                </div> <!--End .box-banner-item-->
+                </div> <!-- End .box-banner-item -->
             </div>
-        </section> <!--End .box-banner-->
+        </section> <!-- End .box-banner -->
+
 
         <section class="sub-banner m-3">
             <div class="container">
@@ -151,25 +154,28 @@
             <div class="container">
                 <div class="box-tranning-top">
                     <div class="row">
-                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
                             <h3 class="mb-4 box-title">KHÓA HỌC NỔI BẬT</h3>
                         </div>
-                        <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9 d-flex justify-content-end">
-                            <ul class="category-list">
-                                <li><a href="#">Combo vip 2025</a></li>
-                                <li><a href="#">Combo vip 2026</a></li>
-                                <li><a href="#">Vật lý 12 chương trình mới</a></li>
-                                <li><a href="#">Vật lý 10-11 chương trình mới</a></li>
-                                <li><a href="#">Khóa học tham khảo (Dành cho giáo viên)</a></li>
+                        <div
+                            class="col-lg-9 col-md-12 col-sm-12 col-xs-12 d-flex justify-content-md-end justify-content-center flex-wrap">
+                            <ul
+                                class="category-list d-flex flex-wrap justify-content-center justify-content-md-end p-0">
+                                <li class="px-2"><a href="#">Combo vip 2025</a></li>
+                                <li class="px-2"><a href="#">Combo vip 2026</a></li>
+                                <li class="px-2"><a href="#">Vật lý 12 chương trình mới</a></li>
+                                <li class="px-2"><a href="#">Vật lý 10-11 chương trình mới</a></li>
+                                <li class="px-2"><a href="#">Khóa học tham khảo</a></li>
                             </ul>
                         </div>
+
                     </div>
                 </div> <!--End .box-tranning-top--->
 
                 <div class="box-tranning-middle">
                     <div class="row">
-                        <div class="col-lg-6 col-lg-6 col-md-6 col-sm-6 col-xs-6 col-sm-6 col-xs-6">
-                            <a href="#"><img src="images/bannercombo.jpg" class="img-fluid img-main-box"
+                        <div class="col-lg-6 col-md-12 col-sm-12 col-12">
+                            <a href="#"><img src="images/bannercombo.jpg" class="img-fluid img-main-box w-100"
                                     alt="Ảnh lớn"></a>
                             <div class="box-tranning-item d-flex">
                                 <p>Học phí</p>
@@ -178,7 +184,8 @@
                             </div> <!--End .box-tranning-item--->
                         </div>
 
-                        <div class="col-lg-6 col-lg-6 col-md-6 col-sm-6 col-xs-6 col-sm-6 col-xs-6">
+
+                        <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
                             <div class="box-right owl-carousel owl-theme">
                                 <div class="item">
                                     <div class="box-traning-img">
@@ -190,7 +197,7 @@
                                             <p class="py-1 ms-2 font-weight-bold">Vật lí 12 (Giáo viên)</p>
                                         </a>
                                         <a href="#">
-                                            <p class="ms-2 py-1">Khóa học tham khảo (Danh cho giáo viên)</p>
+                                            <p class="ms-2 py-1">Khóa học tham khảo</p>
                                         </a>
                                         <div class="d-flex justify-content-between">
                                             <a href="#">
@@ -243,7 +250,7 @@
                         </div>
 
                         <!-- Dưới cùng: 4 sản phẩm -->
-                        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-12 col-md-12 col-sm-12 col-xs-12">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                             <div class="owl-carousel owl-theme m-3 banner-under">
                                 <div class="item">
                                     <div class="item-img">
@@ -346,10 +353,10 @@
             <div class="container">
                 <div class="box-book-top">
                     <div class="row">
-                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
                             <h3 class="mb-4 box-title">SÁCH NỔI BẬT</h3>
                         </div>
-                        <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9 d-flex justify-content-end">
+                        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 d-flex justify-content-end">
                             <ul class="category-list">
                                 <li><a href="#">Sách luyện thi vật lý THPT</a></li>
                                 <li><a href="#">Sách luyện thi THPT</a></li>
@@ -360,7 +367,7 @@
 
                 <div class="box-book-item m-2">
                     <div class="row">
-                        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-12 col-md-12 col-sm-12 col-xs-12">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                             <div class="box-book-info owl-carousel owl-theme">
                                 <div class="item">
                                     <div class="item-img">
@@ -440,11 +447,11 @@
                     <h3 class="mb-4 box-title">SÁCH NỔI BẬT</h3>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <h4 class="text-center rank-subject">Vật lý 10</h4>
                     </div>
 
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <h4 class="text-center rank-subject">Vật lý 11</h4>
                         <div class="ranking-infomation">
                             <a href="#"><img src="images/avatar-default.svg" class="img-fluid" alt=""></a>
@@ -497,7 +504,7 @@
                         </div> <!-- End .ranking-infomation -->
                     </div>
 
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <h4 class="text-center rank-subject">Vật lý 12</h4>
                         <div class="ranking-infomation">
                             <a href="#"><img src="images/avatar-default.svg" class="img-fluid" alt=""></a>
