--- a/index.html
+++ b/index.html
@@ -444,14 +444,14 @@
         <section class="box-ranking">
             <div class="container">
                 <div class="rank-header">
-                    <h3 class="mb-4 box-title">SÁCH NỔI BẬT</h3>
+                    <h3 class="mb-4 box-title">BẢNG XẾP HẠNG</h3>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                         <h4 class="text-center rank-subject">Vật lý 10</h4>
                     </div>
 
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                         <h4 class="text-center rank-subject">Vật lý 11</h4>
                         <div class="ranking-infomation">
                             <a href="#"><img src="images/avatar-default.svg" class="img-fluid" alt=""></a>
@@ -504,7 +504,7 @@
                         </div> <!-- End .ranking-infomation -->
                     </div>
 
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                         <h4 class="text-center rank-subject">Vật lý 12</h4>
                         <div class="ranking-infomation">
                             <a href="#"><img src="images/avatar-default.svg" class="img-fluid" alt=""></a>
@@ -563,7 +563,7 @@
         <section class="news-share mb-1">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
                         <div class="left">
                             <h3 class="left-title box-title mb-4">TIN TỨC</h3>
                             <div class="row">
@@ -598,7 +598,7 @@
                         </div> <!-- End .left -->
                     </div>
 
-                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
                         <div class="right owl-carousel owl-theme">
                             <!-- Chia sẻ 1 -->
                             <div class="item">
