fix bug responsive

--- a/modules/footer.html
+++ b/modules/footer.html
@@ -43,11 +43,11 @@
                     </ul>
                 </div>
                 <div class="footer-social">
-                    <a href="#"><img src="../images/fb.svg" alt=""></a>
-                    <a href="#"><img src="../images/yt.svg" alt=""></a>
-                    <a href="#"><img src="../images/gm.svg" alt=""></a>
-                    <a href="#"><img src="../images/tiktok.svg" alt=""></a>
-                    <a href="#"><img src="../images/logoSaleNoti1.png" alt="" class="img-sale"></a>
+                    <a href="#"><img src="images/fb.svg" alt=""></a>
+                    <a href="#"><img src="images/yt.svg" alt=""></a>
+                    <a href="#"><img src="images/gm.svg" alt=""></a>
+                    <a href="#"><img src="images/tiktok.svg" alt=""></a>
+                    <a href="#"><img src="images/logoSaleNoti1.png" alt="" class="img-sale"></a>
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
     <!-- Facebook -->
     <div class="btn-face">
         <a href="#" target="_blank">
-            <img src="../images/fb.svg" alt="">
+            <img src="images/fb.svg" alt="">
         </a>
     </div>
 
@@ -67,14 +67,14 @@
     <div class="btn-zalo">
                 <!-- Zalo -->
                 <a href="#" target="_blank">
-                    <img src="../images/zaloft.svg" alt="">
+                    <img src="images/zaloft.svg" alt="">
                 </a>
     </div>
 
     <div class="btn-phone">
         <!-- Điện thoại -->
         <a href="#">
-            <img src="../images/phoneft.svg" alt="">
+            <img src="images/phoneft.svg" alt="">
         </a>
     </div>
 
